this took waaaaayyyyy too long - fix the dragging in the editor

--- a/resources/style.scss
+++ b/resources/style.scss
@@ -25,6 +25,7 @@ html, body {
 	min-height: 100%;
 	min-width: 100%;
 	overflow: scroll;
+	position: relative;
 }
 
 .topBar {
